--- a/src/styles/blocks/block-one.scss
+++ b/src/styles/blocks/block-one.scss
@@ -17,7 +17,7 @@
 }
 
 .section--block {
-   background: url(../../img/bg_texture.png) center center no-repeat;
+   background: url(./img/bg_texture.png) center center no-repeat;
    background-size: cover;
    position: relative;
 }
