--- a/src/styles/blocks/block-two.scss
+++ b/src/styles/blocks/block-two.scss
@@ -1,5 +1,5 @@
 .section--block-two {
-   background: url(../../img/bg_best.png) center center no-repeat;
+   background: url(img/bg_best.png) center center no-repeat;
    background-size: cover;
    // height: 100vh;
    width: 100%;
@@ -92,7 +92,7 @@
 
 .content__text {
    width: 80%;
-   margin-left: rem(20px);
+   margin-left: 20px;
 }
 
 .content__text h1 {
