--- a/src/styles/blocks/burgers.scss
+++ b/src/styles/blocks/burgers.scss
@@ -21,7 +21,7 @@
     border-right-color: #fff;
     opacity: .3;
     position: absolute;
-    left: rem(-30px);
+    left: -30px;
     top: 50%;
 
     &:hover {
@@ -35,14 +35,14 @@
 }
 
 .arrow-right {
-    border: rem(25px) solid transparent;
+    border: 25px solid transparent;
     width: 0;
     height: 0;
     border-right-width: 0;
     border-left-color: #fff;
     opacity: .3;
     position: absolute;
-    right: rem(-30px);
+    right: -30px;
     top: 50%;
 
     &:hover {
