--- a/src/styles/blocks/contacts.scss
+++ b/src/styles/blocks/contacts.scss
@@ -8,7 +8,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    background: url(../../img/bg_footer.png) center no-repeat;
+    background: url(img/bg_footer.png) center no-repeat;
     background-size: cover;
     position: absolute;
     left: 0;
