--- a/src/styles/blocks/form.scss
+++ b/src/styles/blocks/form.scss
@@ -1,5 +1,5 @@
 .form {
-    background: url(../../img/bg_form.png) center center no-repeat;
+    background: url(./img/bg_form.png) center center no-repeat;
     background-size: cover;
     display: flex;
     align-items: center;
