--- a/src/styles/blocks/menu.scss
+++ b/src/styles/blocks/menu.scss
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
-    background: url(../../img/bg_menu.png) center center no-repeat;
+    background: url(./img/bg_menu.png) center center no-repeat;
     background-size: cover;
     position: relative;
     // height: 100vh;
