--- a/src/styles/blocks/work.scss
+++ b/src/styles/blocks/work.scss
@@ -1,48 +1,10 @@
 .work {
-    background: url(../../img/bg_work.png) center center no-repeat;
+    background: url(./img/bg_work.png) center center no-repeat;
     background-size: cover;
     position: relative;
     display: flex;
     flex-direction: column;
     justify-content: center;
-}
-
-.play-button {
-    display: block;
-    cursor: pointer;
-    height: 0;
-    width: 0;
-    border: rem(12px) solid;
-    border-right-width: 0;
-    border-left-color: #575757;
-    border-top-color: transparent;
-    border-bottom-color: transparent;
-}
-
-.play-button--pause {
-    cursor: pointer;
-    height: rem(24px);
-    width: rem(24px);
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-
-
-    &:after {
-        content: '';
-        display: inline-block;
-        height: 80%;
-        width: 28%;
-        background-color: #575757;
-    }
-
-    &:before {
-        content: '';
-        display: inline-block;
-        height: 80%;
-        width: 28%;
-        background-color: #575757;
-    }
 }
 
 .title__work {
@@ -72,19 +34,21 @@
 }
 
 .player__start {
-    width: 10%;
+    width: rem(50px);
+    height: rem(50px);
     display: flex;
     align-items: center;
     justify-content: center;
-    color: #575757;
+    color: #626262;
     font-family: ubuntu-regular;
-    margin: rem(3px) 0;
+    // margin: rem(3px) 0;
+    overflow: hidden;
 }
 
 .player__controls {
     width: 100%;
-    height: 120%;
-    background-color: #222;
+    height: rem(50px);
+    background-color: #3e3e3e;
     display: flex;
     align-items: center;
     justify-content: space-around;
@@ -96,7 +60,7 @@
 }
 
 .player__duration {
-    color: #575757;
+    color: #626262;
     font-size: .8rem;
 }
 
@@ -122,9 +86,8 @@
 
 #progress::-webkit-progress-value {
     -webkit-appearance: none;
-
     cursor: pointer;
-    background-color: #575757;
+    background-color: #626262;
     border-radius: rem(5px);
 }
 
@@ -137,16 +100,16 @@ video {
     height: rem(4px);
     width: rem(60px);
     border-radius: rem(2px);
-    background-color: #878787;
+    background-color: #626262;
     cursor: pointer;
 }
 
 .playback__way::-webkit-slider-thumb {
     -webkit-appearance: none;
-    height: rem(10px);
-    width: rem(10px);
+    height: rem(15px);
+    width: rem(15px);
     border-radius: 50%;
-    background-color: #575757;
+    background-color: #626262;
     cursor: pointer;
 }
 
@@ -155,4 +118,65 @@ video {
     display: flex;
     align-items: center;
     justify-content: center;
+    position: relative;
+}
+
+.work__volume {
+    fill: #626262;
+    height: 3rem;
+    width: 3rem;
+}
+
+.work__play {
+    fill: #fff;
+    height: 10rem;
+    width: 10rem;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    transition: display 1s;
+    cursor: pointer;
+}
+
+.play-button {
+    fill: #626262;
+    height: 3rem;
+    width: 3rem;
+    cursor: pointer;
+}
+
+.play-button--pause {
+    cursor: pointer;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+
+
+    &:after {
+        content: '';
+        display: inline-block;
+        height: 50%;
+        width: 20%;
+        background-color: #626262;
+        border-radius: rem(2px);
+    }
+
+    &:before {
+        content: '';
+        display: inline-block;
+        height: 50%;
+        width: 20%;
+        background-color: #626262;
+        border-radius: rem(2px);
+    }
+}
+
+.work__volume-x {
+    color: #fff;
+    font-size: 1rem;
+    font-family: ubuntu-regular;
+    position: absolute;
+    left: -25%;
+    display: none;
 }
